--- a/mybibliography.bib
+++ b/mybibliography.bib
@@ -1,579 +1,579 @@
 @article{ioannides2016known,
-  title={Known vulnerabilities of global navigation satellite systems, status, and potential mitigation techniques},
-  author={Ioannides, Rigas Themistoklis and Pany, Thomas and Gibbons, Glen},
-  journal={Proceedings of the IEEE},
-  volume={104},
-  number={6},
-  pages={1174--1194},
-  year={2016},
-  publisher={IEEE}
+  title     = {Known vulnerabilities of global navigation satellite systems, status, and potential mitigation techniques},
+  author    = {Ioannides, Rigas Themistoklis and Pany, Thomas and Gibbons, Glen},
+  journal   = {Proceedings of the IEEE},
+  volume    = {104},
+  number    = {6},
+  pages     = {1174--1194},
+  year      = {2016},
+  publisher = {IEEE}
 }
 
 @inproceedings{papadimitratos2008protection,
-  title={Protection and fundamental vulnerability of GNSS},
-  author={Papadimitratos, Panagiotis and Jovanovic, Aleksandar},
-  booktitle={2008 IEEE International Workshop on Satellite and Space Communications},
-  pages={167--171},
-  year={2008},
-  organization={IEEE}
+  title        = {Protection and fundamental vulnerability of GNSS},
+  author       = {Papadimitratos, Panagiotis and Jovanovic, Aleksandar},
+  booktitle    = {2008 IEEE International Workshop on Satellite and Space Communications},
+  pages        = {167--171},
+  year         = {2008},
+  organization = {IEEE}
 }
 @article{pinker1999vulnerability,
-  title={Vulnerability of the GPS Signal to Jamming},
-  author={Pinker, Aron and Smith, Charles},
-  journal={GPS Solutions},
-  volume={3},
-  number={2},
-  pages={19--27},
-  year={1999},
-  publisher={Springer}
+  title     = {Vulnerability of the GPS Signal to Jamming},
+  author    = {Pinker, Aron and Smith, Charles},
+  journal   = {GPS Solutions},
+  volume    = {3},
+  number    = {2},
+  pages     = {19--27},
+  year      = {1999},
+  publisher = {Springer}
 }
 
 @article{amin2016vulnerabilities,
-  title={Vulnerabilities, threats, and authentication in satellite-based navigation systems [scanning the issue]},
-  author={Amin, Moeness G and Closas, Pau and Broumandan, Ali and Volakis, John L},
-  journal={Proceedings of the IEEE},
-  volume={104},
-  number={6},
-  pages={1169--1173},
-  year={2016},
-  publisher={IEEE}
+  title     = {Vulnerabilities, threats, and authentication in satellite-based navigation systems [scanning the issue]},
+  author    = {Amin, Moeness G and Closas, Pau and Broumandan, Ali and Volakis, John L},
+  journal   = {Proceedings of the IEEE},
+  volume    = {104},
+  number    = {6},
+  pages     = {1169--1173},
+  year      = {2016},
+  publisher = {IEEE}
 }
 
 @article{lo2016greener,
-  title={Greener and smarter phones for future cities: Characterizing the impact of GPS signal strength on power consumption},
-  author={Lo’ai, A Tawalbeh and Basalamah, Anas and Mehmood, Rashid and Tawalbeh, Hala},
-  journal={IEEE Access},
-  volume={4},
-  pages={858--868},
-  year={2016},
-  publisher={IEEE}
+  title     = {Greener and smarter phones for future cities: Characterizing the impact of GPS signal strength on power consumption},
+  author    = {Lo'ai, A Tawalbeh and Basalamah, Anas and Mehmood, Rashid and Tawalbeh, Hala},
+  journal   = {IEEE Access},
+  volume    = {4},
+  pages     = {858--868},
+  year      = {2016},
+  publisher = {IEEE}
 }
 
 @inproceedings{kao1991integration,
-  title={Integration of GPS and dead-reckoning navigation systems},
-  author={Kao, Wei-Wen},
-  booktitle={Vehicle Navigation and Information Systems Conference, 1991},
-  volume={2},
-  pages={635--643},
-  year={1991},
-  organization={IEEE}
+  title        = {Integration of GPS and dead-reckoning navigation systems},
+  author       = {Kao, Wei-Wen},
+  booktitle    = {Vehicle Navigation and Information Systems Conference, 1991},
+  volume       = {2},
+  pages        = {635--643},
+  year         = {1991},
+  organization = {IEEE}
 }
 
 @inproceedings{omar2016integration,
-  title={Integration of GPS and dead reckoning navigation system using moving horizon estimation},
-  author={Omar, Halima Mansour and Yanzhong, Zhang and Bo, Zhang and Gul, Haris Ubaid},
-  booktitle={2016 IEEE Information Technology, Networking, Electronic and Automation Control Conference},
-  pages={553--556},
-  year={2016},
-  organization={IEEE}
+  title        = {Integration of GPS and dead reckoning navigation system using moving horizon estimation},
+  author       = {Omar, Halima Mansour and Yanzhong, Zhang and Bo, Zhang and Gul, Haris Ubaid},
+  booktitle    = {2016 IEEE Information Technology, Networking, Electronic and Automation Control Conference},
+  pages        = {553--556},
+  year         = {2016},
+  organization = {IEEE}
 }
 
 @inproceedings{sahawneh2008development,
-  title={Development and calibration of low cost MEMS IMU for UAV applications},
-  author={Sahawneh, L and Jarrah, MA},
-  booktitle={2008 5th International Symposium on Mechatronics and Its Applications},
-  pages={1--9},
-  year={2008},
-  organization={IEEE}
+  title        = {Development and calibration of low cost MEMS IMU for UAV applications},
+  author       = {Sahawneh, L and Jarrah, MA},
+  booktitle    = {2008 5th International Symposium on Mechatronics and Its Applications},
+  pages        = {1--9},
+  year         = {2008},
+  organization = {IEEE}
 }
 
 @article{dewhirst2016improving,
-  title={Improving the accuracy of estimates of animal path and travel distance using GPS drift-corrected dead reckoning},
-  author={Dewhirst, Oliver P and Evans, Hannah K and Roskilly, Kyle and Harvey, Richard J and Hubel, Tatjana Y and Wilson, Alan M},
-  journal={Ecology and evolution},
-  volume={6},
-  number={17},
-  pages={6210--6222},
-  year={2016},
-  publisher={Wiley Online Library}
+  title     = {Improving the accuracy of estimates of animal path and travel distance using GPS drift-corrected dead reckoning},
+  author    = {Dewhirst, Oliver P and Evans, Hannah K and Roskilly, Kyle and Harvey, Richard J and Hubel, Tatjana Y and Wilson, Alan M},
+  journal   = {Ecology and evolution},
+  volume    = {6},
+  number    = {17},
+  pages     = {6210--6222},
+  year      = {2016},
+  publisher = {Wiley Online Library}
 }
 
 @inproceedings{krakiwsky1988kalman,
-  title={A Kalman filter for integrating dead reckoning, map matching and GPS positioning},
-  author={Krakiwsky, Edward J and Harris, Clyde B and Wong, Richard VC},
-  booktitle={IEEE PLANS'88., Position Location and Navigation Symposium, Record.'Navigation into the 21st Century'.},
-  pages={39--46},
-  year={1988},
-  organization={IEEE}
+  title        = {A Kalman filter for integrating dead reckoning, map matching and GPS positioning},
+  author       = {Krakiwsky, Edward J and Harris, Clyde B and Wong, Richard VC},
+  booktitle    = {IEEE PLANS'88., Position Location and Navigation Symposium, Record.'Navigation into the 21st Century'.},
+  pages        = {39--46},
+  year         = {1988},
+  organization = {IEEE}
 }
 
 @article{janota2015improving,
-  title={Improving the precision and speed of Euler angles computation from low-cost rotation sensor data},
-  author={Janota, Ale{\v{s}} and {\v{S}}im{\'a}k, Vojtech and Nemec, Du{\v{s}}an and Hrb{\v{c}}ek, Jozef},
-  journal={Sensors},
-  volume={15},
-  number={3},
-  pages={7016--7039},
-  year={2015},
-  publisher={Multidisciplinary Digital Publishing Institute}
+  title     = {Improving the precision and speed of Euler angles computation from low-cost rotation sensor data},
+  author    = {Janota, Ale{\v{s}} and {\v{S}}im{\'a}k, Vojtech and Nemec, Du{\v{s}}an and Hrb{\v{c}}ek, Jozef},
+  journal   = {Sensors},
+  volume    = {15},
+  number    = {3},
+  pages     = {7016--7039},
+  year      = {2015},
+  publisher = {Multidisciplinary Digital Publishing Institute}
 }
 
 @article{bojanczyk1991computation,
-  title={Computation of the Euler Angles of a Symmetric 3*3 Matrix},
-  author={Bojanczyk, Adam W and Lutoborski, Adam},
-  journal={SIAM Journal on Matrix Analysis and Applications},
-  volume={12},
-  number={1},
-  pages={41--48},
-  year={1991},
-  publisher={SIAM}
+  title     = {Computation of the Euler Angles of a Symmetric 3*3 Matrix},
+  author    = {Bojanczyk, Adam W and Lutoborski, Adam},
+  journal   = {SIAM Journal on Matrix Analysis and Applications},
+  volume    = {12},
+  number    = {1},
+  pages     = {41--48},
+  year      = {1991},
+  publisher = {SIAM}
 }
 
 @article{hemingway2018perspectives,
-  title={Perspectives on Euler angle singularities, gimbal lock, and the orthogonality of applied forces and applied moments},
-  author={Hemingway, Evan G and O’Reilly, Oliver M},
-  journal={Multibody System Dynamics},
-  volume={44},
-  number={1},
-  pages={31--56},
-  year={2018},
-  publisher={Springer}
+  title     = {Perspectives on Euler angle singularities, gimbal lock, and the orthogonality of applied forces and applied moments},
+  author    = {Hemingway, Evan G and O'Reilly, Oliver M},
+  journal   = {Multibody System Dynamics},
+  volume    = {44},
+  number    = {1},
+  pages     = {31--56},
+  year      = {2018},
+  publisher = {Springer}
 }
 
 @inproceedings{alaimo2013comparison,
-  title={Comparison between euler and quaternion parametrization in uav dynamics},
-  author={Alaimo, Andrea and Artale, V and Milazzo, C and Ricciardello, Angela},
-  booktitle={AIP Conference Proceedings},
-  volume={1558},
-  number={1},
-  pages={1228--1231},
-  year={2013},
-  organization={American Institute of Physics}
+  title        = {Comparison between euler and quaternion parametrization in uav dynamics},
+  author       = {Alaimo, Andrea and Artale, V and Milazzo, C and Ricciardello, Angela},
+  booktitle    = {AIP Conference Proceedings},
+  volume       = {1558},
+  number       = {1},
+  pages        = {1228--1231},
+  year         = {2013},
+  organization = {American Institute of Physics}
 }
 
 @article{dinkov2019low,
-  title={A Low Cost Method UAV-PPK-Accuracy and Application},
-  author={Dinkov, Davis},
-  year={2019}
+  title  = {A Low Cost Method UAV-PPK-Accuracy and Application},
+  author = {Dinkov, Davis},
+  year   = {2019}
 }
 
 @article{nemra2010robust,
-  title={Robust INS/GPS sensor fusion for UAV localization using SDRE nonlinear filtering},
-  author={Nemra, Abdelkrim and Aouf, Nabil},
-  journal={IEEE Sensors Journal},
-  volume={10},
-  number={4},
-  pages={789--798},
-  year={2010},
-  publisher={IEEE}
+  title     = {Robust INS/GPS sensor fusion for UAV localization using SDRE nonlinear filtering},
+  author    = {Nemra, Abdelkrim and Aouf, Nabil},
+  journal   = {IEEE Sensors Journal},
+  volume    = {10},
+  number    = {4},
+  pages     = {789--798},
+  year      = {2010},
+  publisher = {IEEE}
 }
 
 @article{kwak2018autonomous,
-  title={Autonomous UAV flight control for GPS-based navigation},
-  author={Kwak, Jeonghoon and Sung, Yunsick},
-  journal={IEEE Access},
-  volume={6},
-  pages={37947--37955},
-  year={2018},
-  publisher={IEEE}
+  title     = {Autonomous UAV flight control for GPS-based navigation},
+  author    = {Kwak, Jeonghoon and Sung, Yunsick},
+  journal   = {IEEE Access},
+  volume    = {6},
+  pages     = {37947--37955},
+  year      = {2018},
+  publisher = {IEEE}
 }
 
 @inproceedings{yoo2003low,
-  title={Low cost GPS/INS sensor fusion system for UAV navigation},
-  author={Yoo, Chang-Sun Yoo Chang-Sun and Ahn, Iee-Ki Ahn Iee-Ki},
-  booktitle={Digital Avionics Systems Conference, 2003. DASC'03. The 22nd},
-  volume={2},
-  pages={8--A},
-  year={2003},
-  organization={IEEE}
+  title        = {Low cost GPS/INS sensor fusion system for UAV navigation},
+  author       = {Yoo, Chang-Sun Yoo Chang-Sun and Ahn, Iee-Ki Ahn Iee-Ki},
+  booktitle    = {Digital Avionics Systems Conference, 2003. DASC'03. The 22nd},
+  volume       = {2},
+  pages        = {8--A},
+  year         = {2003},
+  organization = {IEEE}
 }
 
 @article{thong2004numerical,
-  title={Numerical double integration of acceleration measurements in noise},
-  author={Thong, YK and Woolfson, MS and Crowe, JA and Hayes-Gill, BR and Jones, DA},
-  journal={Measurement},
-  volume={36},
-  number={1},
-  pages={73--92},
-  year={2004},
-  publisher={Elsevier}
+  title     = {Numerical double integration of acceleration measurements in noise},
+  author    = {Thong, YK and Woolfson, MS and Crowe, JA and Hayes-Gill, BR and Jones, DA},
+  journal   = {Measurement},
+  volume    = {36},
+  number    = {1},
+  pages     = {73--92},
+  year      = {2004},
+  publisher = {Elsevier}
 }
 
 @article{nistler2011gravity,
-  title={Gravity compensation in accelerometer measurements for robot navigation on inclined surfaces},
-  author={Nistler, Jonathan R and Selekwa, Majura F},
-  journal={Procedia Computer Science},
-  volume={6},
-  pages={413--418},
-  year={2011},
-  publisher={Elsevier}
+  title     = {Gravity compensation in accelerometer measurements for robot navigation on inclined surfaces},
+  author    = {Nistler, Jonathan R and Selekwa, Majura F},
+  journal   = {Procedia Computer Science},
+  volume    = {6},
+  pages     = {413--418},
+  year      = {2011},
+  publisher = {Elsevier}
 }
 
 @article{yang2006simple,
-  title={A simple approach to integration of acceleration data for dynamic soil--structure interaction analysis},
-  author={Yang, J and Li, JB and Lin, G},
-  journal={Soil dynamics and earthquake engineering},
-  volume={26},
-  number={8},
-  pages={725--734},
-  year={2006},
-  publisher={Elsevier}
+  title     = {A simple approach to integration of acceleration data for dynamic soil--structure interaction analysis},
+  author    = {Yang, J and Li, JB and Lin, G},
+  journal   = {Soil dynamics and earthquake engineering},
+  volume    = {26},
+  number    = {8},
+  pages     = {725--734},
+  year      = {2006},
+  publisher = {Elsevier}
 }
 
 @article{chan2006integrated,
-  title={An integrated GPS--accelerometer data processing technique for structural deformation monitoring},
-  author={Chan, WS and Xu, YL and Ding, XL and Dai, WJ},
-  journal={Journal of Geodesy},
-  volume={80},
-  number={12},
-  pages={705--719},
-  year={2006},
-  publisher={Springer}
+  title     = {An integrated GPS--accelerometer data processing technique for structural deformation monitoring},
+  author    = {Chan, WS and Xu, YL and Ding, XL and Dai, WJ},
+  journal   = {Journal of Geodesy},
+  volume    = {80},
+  number    = {12},
+  pages     = {705--719},
+  year      = {2006},
+  publisher = {Springer}
 }
 
 @inproceedings{steinhoff2010dead,
-  title={Dead reckoning from the pocket-an experimental study},
-  author={Steinhoff, Ulrich and Schiele, Bernt},
-  booktitle={2010 IEEE international conference on pervasive computing and communications (PerCom)},
-  pages={162--170},
-  year={2010},
-  organization={IEEE}
+  title        = {Dead reckoning from the pocket-an experimental study},
+  author       = {Steinhoff, Ulrich and Schiele, Bernt},
+  booktitle    = {2010 IEEE international conference on pervasive computing and communications (PerCom)},
+  pages        = {162--170},
+  year         = {2010},
+  organization = {IEEE}
 }
 
 @article{weinberg2002using,
-  title={Using the ADXL202 in pedometer and personal navigation applications},
-  author={Weinberg, Harvey},
-  journal={Analog Devices AN-602 application note},
-  volume={2},
-  number={2},
-  pages={1--6},
-  year={2002}
+  title   = {Using the ADXL202 in pedometer and personal navigation applications},
+  author  = {Weinberg, Harvey},
+  journal = {Analog Devices AN-602 application note},
+  volume  = {2},
+  number  = {2},
+  pages   = {1--6},
+  year    = {2002}
 }
 
 @article{savage1998strapdown,
-  title={Strapdown inertial navigation integration algorithm design part 2: Velocity and position algorithms},
-  author={Savage, Paul G},
-  journal={Journal of Guidance, Control, and Dynamics},
-  volume={21},
-  number={2},
-  pages={208--221},
-  year={1998}
+  title   = {Strapdown inertial navigation integration algorithm design part 2: Velocity and position algorithms},
+  author  = {Savage, Paul G},
+  journal = {Journal of Guidance, Control, and Dynamics},
+  volume  = {21},
+  number  = {2},
+  pages   = {208--221},
+  year    = {1998}
 }
 
 @article{ladetto2002step,
-  title={In step with INS navigation for the blind, tracking emergency crews},
-  author={Ladetto, Quentin and Merminod, Bertrand},
-  journal={Gps World},
-  volume={13},
-  number={ARTICLE},
-  pages={30--38},
-  year={2002}
+  title   = {In step with INS navigation for the blind, tracking emergency crews},
+  author  = {Ladetto, Quentin and Merminod, Bertrand},
+  journal = {Gps World},
+  volume  = {13},
+  number  = {ARTICLE},
+  pages   = {30--38},
+  year    = {2002}
 }
 
 @article{kim2004step,
-  title={A step, stride and heading determination for the pedestrian navigation system},
-  author={Kim, Jeong Won and Jang, Han Jin and Hwang, Dong-Hwan and Park, Chansik},
-  journal={Journal of Global Positioning Systems},
-  volume={3},
-  number={1-2},
-  pages={273--279},
-  year={2004}
+  title   = {A step, stride and heading determination for the pedestrian navigation system},
+  author  = {Kim, Jeong Won and Jang, Han Jin and Hwang, Dong-Hwan and Park, Chansik},
+  journal = {Journal of Global Positioning Systems},
+  volume  = {3},
+  number  = {1-2},
+  pages   = {273--279},
+  year    = {2004}
 }
 
 @inproceedings{collin2002mems,
-  title={MEMS-IMU for personal positioning in a vehicle--A gyro-free approach},
-  author={Collin, Jussi and Lachapelle, G and K{\"a}ppi, Jani},
-  booktitle={Proceedings of ION GPS},
-  pages={24--27},
-  year={2002}
+  title     = {MEMS-IMU for personal positioning in a vehicle--A gyro-free approach},
+  author    = {Collin, Jussi and Lachapelle, G and K{\"a}ppi, Jani},
+  booktitle = {Proceedings of ION GPS},
+  pages     = {24--27},
+  year      = {2002}
 }
 
 @inproceedings{kappi2001mems,
-  title={MEMS-IMU based pedestrian navigator for handheld devices},
-  author={Kappi, Jani and Syrjarinne, Jari and Saarinen, Jukka},
-  booktitle={Proceedings of the 14th international technical meeting of the satellite division of the institute of navigation (ION GPS 2001)},
-  pages={1369--1373},
-  year={2001}
+  title     = {MEMS-IMU based pedestrian navigator for handheld devices},
+  author    = {Kappi, Jani and Syrjarinne, Jari and Saarinen, Jukka},
+  booktitle = {Proceedings of the 14th international technical meeting of the satellite division of the institute of navigation (ION GPS 2001)},
+  pages     = {1369--1373},
+  year      = {2001}
 }
 
 @article{foxlin2005pedestrian,
-  title={Pedestrian tracking with shoe-mounted inertial sensors},
-  author={Foxlin, Eric},
-  journal={IEEE Computer graphics and applications},
-  volume={25},
-  number={6},
-  pages={38--46},
-  year={2005},
-  publisher={IEEE}
+  title     = {Pedestrian tracking with shoe-mounted inertial sensors},
+  author    = {Foxlin, Eric},
+  journal   = {IEEE Computer graphics and applications},
+  volume    = {25},
+  number    = {6},
+  pages     = {38--46},
+  year      = {2005},
+  publisher = {IEEE}
 }
 
 @inproceedings{stirling2003innovative,
-  title={An innovative shoe-mounted pedestrian navigation system},
-  author={Stirling, Ross and Collin, Jussi and Fyfe, Ken and Lachapelle, G{\'e}rard},
-  booktitle={proceedings of European navigation conference GNSS},
-  volume={110},
-  number={5},
-  year={2003}
+  title     = {An innovative shoe-mounted pedestrian navigation system},
+  author    = {Stirling, Ross and Collin, Jussi and Fyfe, Ken and Lachapelle, G{\'e}rard},
+  booktitle = {proceedings of European navigation conference GNSS},
+  volume    = {110},
+  number    = {5},
+  year      = {2003}
 }
 
 @inproceedings{coyte2013displacement,
-  title={Displacement profile estimation using low cost inertial motion sensors with applications to sporting and rehabilitation exercises},
-  author={Coyte, James L and Stirling, David and Ros, Montserrat and Du, Haiping and Gray, Andrew},
-  booktitle={2013 IEEE/ASME International Conference on Advanced Intelligent Mechatronics},
-  pages={1290--1295},
-  year={2013},
-  organization={IEEE}
+  title        = {Displacement profile estimation using low cost inertial motion sensors with applications to sporting and rehabilitation exercises},
+  author       = {Coyte, James L and Stirling, David and Ros, Montserrat and Du, Haiping and Gray, Andrew},
+  booktitle    = {2013 IEEE/ASME International Conference on Advanced Intelligent Mechatronics},
+  pages        = {1290--1295},
+  year         = {2013},
+  organization = {IEEE}
 }
 
 @article{jameian2019robust,
-  title={A robust and fast self-alignment method for strapdown inertial navigation system in rough sea conditions},
-  author={Jameian, Hassan and Safarinejadian, Behrouz and Shasadeghi, Mokhtar},
-  journal={Ocean Engineering},
-  volume={187},
-  pages={106196},
-  year={2019},
-  publisher={Elsevier}
+  title     = {A robust and fast self-alignment method for strapdown inertial navigation system in rough sea conditions},
+  author    = {Jameian, Hassan and Safarinejadian, Behrouz and Shasadeghi, Mokhtar},
+  journal   = {Ocean Engineering},
+  volume    = {187},
+  pages     = {106196},
+  year      = {2019},
+  publisher = {Elsevier}
 }
 
 @article{bird2011indoor,
-  title={Indoor navigation with foot-mounted strapdown inertial navigation and magnetic sensors [emerging opportunities for localization and tracking]},
-  author={Bird, Jeff and Arden, Dale},
-  journal={IEEE Wireless Communications},
-  volume={18},
-  number={2},
-  pages={28--35},
-  year={2011},
-  publisher={IEEE}
+  title     = {Indoor navigation with foot-mounted strapdown inertial navigation and magnetic sensors [emerging opportunities for localization and tracking]},
+  author    = {Bird, Jeff and Arden, Dale},
+  journal   = {IEEE Wireless Communications},
+  volume    = {18},
+  number    = {2},
+  pages     = {28--35},
+  year      = {2011},
+  publisher = {IEEE}
 }
 
 @book{mitchell2007multi,
-  title={Multi-sensor data fusion: an introduction},
-  author={Mitchell, Harvey B},
-  year={2007},
-  publisher={Springer Science \& Business Media}
+  title     = {Multi-sensor data fusion: an introduction},
+  author    = {Mitchell, Harvey B},
+  year      = {2007},
+  publisher = {Springer Science \& Business Media}
 }
 
 @article{hall1997introduction,
-  title={An introduction to multisensor data fusion},
-  author={Hall, David L and Llinas, James},
-  journal={Proceedings of the IEEE},
-  volume={85},
-  number={1},
-  pages={6--23},
-  year={1997},
-  publisher={IEEE}
+  title     = {An introduction to multisensor data fusion},
+  author    = {Hall, David L and Llinas, James},
+  journal   = {Proceedings of the IEEE},
+  volume    = {85},
+  number    = {1},
+  pages     = {6--23},
+  year      = {1997},
+  publisher = {IEEE}
 }
 
 @article{elmenreich2002introduction,
-  title={An introduction to sensor fusion},
-  author={Elmenreich, Wilfried},
-  journal={Vienna University of Technology, Austria},
-  volume={502},
-  pages={1--28},
-  year={2002}
+  title   = {An introduction to sensor fusion},
+  author  = {Elmenreich, Wilfried},
+  journal = {Vienna University of Technology, Austria},
+  volume  = {502},
+  pages   = {1--28},
+  year    = {2002}
 }
 
 @misc{welch1995introduction,
-  title={An introduction to the Kalman filter},
-  author={Welch, Greg and Bishop, Gary and others},
-  year={1995},
-  publisher={Citeseer}
+  title     = {An introduction to the Kalman filter},
+  author    = {Welch, Greg and Bishop, Gary and others},
+  year      = {1995},
+  publisher = {Citeseer}
 }
 
 @inproceedings{mosallaei2007process,
-  title={Process fault detection and diagnosis by synchronous and asynchronous decentralized kalman filtering using state-vector fusion technique},
-  author={Mosallaei, Mohsen and Salahshoor, Karim and Bayat, Mohammad Reza},
-  booktitle={2007 3rd International Conference on Intelligent Sensors, Sensor Networks and Information},
-  pages={209--214},
-  year={2007},
-  organization={IEEE}
+  title        = {Process fault detection and diagnosis by synchronous and asynchronous decentralized kalman filtering using state-vector fusion technique},
+  author       = {Mosallaei, Mohsen and Salahshoor, Karim and Bayat, Mohammad Reza},
+  booktitle    = {2007 3rd International Conference on Intelligent Sensors, Sensor Networks and Information},
+  pages        = {209--214},
+  year         = {2007},
+  organization = {IEEE}
 }
 
 @article{faragher2012understanding,
-  title={Understanding the basis of the kalman filter via a simple and intuitive derivation [lecture notes]},
-  author={Faragher, Ramsey},
-  journal={IEEE Signal processing magazine},
-  volume={29},
-  number={5},
-  pages={128--132},
-  year={2012},
-  publisher={IEEE}
+  title     = {Understanding the basis of the kalman filter via a simple and intuitive derivation [lecture notes]},
+  author    = {Faragher, Ramsey},
+  journal   = {IEEE Signal processing magazine},
+  volume    = {29},
+  number    = {5},
+  pages     = {128--132},
+  year      = {2012},
+  publisher = {IEEE}
 }
 
 @inproceedings{sharma2014sensor,
-  title={Sensor fusion for prediction of orientation and position from obstacle using multiple IR sensors an approach based on Kalman filter},
-  author={Sharma, K Rahul and Honc, Daniel and Du{\v{s}}ek, Franti{\v{s}}ek},
-  booktitle={2014 International Conference on Applied Electronics},
-  pages={263--266},
-  year={2014},
-  organization={IEEE}
+  title        = {Sensor fusion for prediction of orientation and position from obstacle using multiple IR sensors an approach based on Kalman filter},
+  author       = {Sharma, K Rahul and Honc, Daniel and Du{\v{s}}ek, Franti{\v{s}}ek},
+  booktitle    = {2014 International Conference on Applied Electronics},
+  pages        = {263--266},
+  year         = {2014},
+  organization = {IEEE}
 }
 
 @inproceedings{hetenyi2016sensor,
-  title={Sensor fusion with enhanced Kalman Filter for altitude control of quadrotors},
-  author={Het{\'e}nyi, D{\'a}niel and G{\'o}tzy, M{\'a}rton and Bl{\'a}zovics, L{\'a}szl{\'o}},
-  booktitle={2016 IEEE 11th International Symposium on Applied Computational Intelligence and Informatics (SACI)},
-  pages={413--418},
-  year={2016},
-  organization={IEEE}
+  title        = {Sensor fusion with enhanced Kalman Filter for altitude control of quadrotors},
+  author       = {Het{\'e}nyi, D{\'a}niel and G{\'o}tzy, M{\'a}rton and Bl{\'a}zovics, L{\'a}szl{\'o}},
+  booktitle    = {2016 IEEE 11th International Symposium on Applied Computational Intelligence and Informatics (SACI)},
+  pages        = {413--418},
+  year         = {2016},
+  organization = {IEEE}
 }
 
 @article{luo2013uav,
-  title={UAV position estimation and collision avoidance using the extended Kalman filter},
-  author={Luo, Chunbo and McClean, Sally I and Parr, Gerard and Teacy, Luke and De Nardi, Renzo},
-  journal={IEEE Transactions on Vehicular Technology},
-  volume={62},
-  number={6},
-  pages={2749--2762},
-  year={2013},
-  publisher={IEEE}
+  title     = {UAV position estimation and collision avoidance using the extended Kalman filter},
+  author    = {Luo, Chunbo and McClean, Sally I and Parr, Gerard and Teacy, Luke and De Nardi, Renzo},
+  journal   = {IEEE Transactions on Vehicular Technology},
+  volume    = {62},
+  number    = {6},
+  pages     = {2749--2762},
+  year      = {2013},
+  publisher = {IEEE}
 }
 
 @article{wong1988high,
-  title={High-Accuracy Kinematic Positioning by GPS-INS},
-  author={Wong, RVC and Schwarz, KP and Cannon, ME},
-  journal={Navigation},
-  volume={35},
-  number={2},
-  pages={275--287},
-  year={1988},
-  publisher={Wiley Online Library}
+  title     = {High-Accuracy Kinematic Positioning by GPS-INS},
+  author    = {Wong, RVC and Schwarz, KP and Cannon, ME},
+  journal   = {Navigation},
+  volume    = {35},
+  number    = {2},
+  pages     = {275--287},
+  year      = {1988},
+  publisher = {Wiley Online Library}
 }
 
 @article{nassar2004improving,
-  title={Improving positioning accuracy during kinematic DGPS outage periods using SINS/DGPS integration and SINS data de-noising},
-  author={Nassar, S and Noureldin, A and El-Sheimy, N},
-  journal={Survey Review},
-  volume={37},
-  number={292},
-  pages={426--438},
-  year={2004},
-  publisher={Taylor \& Francis}
+  title     = {Improving positioning accuracy during kinematic DGPS outage periods using SINS/DGPS integration and SINS data de-noising},
+  author    = {Nassar, S and Noureldin, A and El-Sheimy, N},
+  journal   = {Survey Review},
+  volume    = {37},
+  number    = {292},
+  pages     = {426--438},
+  year      = {2004},
+  publisher = {Taylor \& Francis}
 }
 
 @article{noureldin2008performance,
-  title={Performance enhancement of MEMS-based INS/GPS integration for low-cost navigation applications},
-  author={Noureldin, Aboelmagd and Karamat, Tashfeen B and Eberts, Mark D and El-Shafie, Ahmed},
-  journal={IEEE Transactions on vehicular technology},
-  volume={58},
-  number={3},
-  pages={1077--1096},
-  year={2008},
-  publisher={IEEE}
+  title     = {Performance enhancement of MEMS-based INS/GPS integration for low-cost navigation applications},
+  author    = {Noureldin, Aboelmagd and Karamat, Tashfeen B and Eberts, Mark D and El-Shafie, Ahmed},
+  journal   = {IEEE Transactions on vehicular technology},
+  volume    = {58},
+  number    = {3},
+  pages     = {1077--1096},
+  year      = {2008},
+  publisher = {IEEE}
 }
 
 @article{qi2002direct,
-  title={Direct Kalman filtering approach for GPS/INS integration},
-  author={Qi, Honghui and Moore, John B},
-  journal={IEEE Transactions on Aerospace and Electronic Systems},
-  volume={38},
-  number={2},
-  pages={687--693},
-  year={2002},
-  publisher={IEEE}
+  title     = {Direct Kalman filtering approach for GPS/INS integration},
+  author    = {Qi, Honghui and Moore, John B},
+  journal   = {IEEE Transactions on Aerospace and Electronic Systems},
+  volume    = {38},
+  number    = {2},
+  pages     = {687--693},
+  year      = {2002},
+  publisher = {IEEE}
 }
 
 @article{mohamed1999adaptive,
-  title={Adaptive Kalman filtering for INS/GPS},
-  author={Mohamed, AH and Schwarz, KP},
-  journal={Journal of geodesy},
-  volume={73},
-  number={4},
-  pages={193--203},
-  year={1999},
-  publisher={Springer}
+  title     = {Adaptive Kalman filtering for INS/GPS},
+  author    = {Mohamed, AH and Schwarz, KP},
+  journal   = {Journal of geodesy},
+  volume    = {73},
+  number    = {4},
+  pages     = {193--203},
+  year      = {1999},
+  publisher = {Springer}
 }
 
 @article{higgins1975comparison,
-  title={A comparison of complementary and Kalman filtering},
-  author={Higgins, Walter T},
-  journal={IEEE Transactions on Aerospace and Electronic Systems},
-  number={3},
-  pages={321--325},
-  year={1975},
-  publisher={IEEE}
+  title     = {A comparison of complementary and Kalman filtering},
+  author    = {Higgins, Walter T},
+  journal   = {IEEE Transactions on Aerospace and Electronic Systems},
+  number    = {3},
+  pages     = {321--325},
+  year      = {1975},
+  publisher = {IEEE}
 }
 
 @article{madgwick2020extended,
-  title={An extended complementary filter for full-body MARG orientation estimation},
-  author={Madgwick, Sebastian OH and Wilson, Samuel and Turk, Ruth and Burridge, Jane and Kapatos, Christos and Vaidyanathan, Ravi},
-  journal={IEEE/ASME Transactions on Mechatronics},
-  volume={25},
-  number={4},
-  pages={2054--2064},
-  year={2020},
-  publisher={IEEE}
+  title     = {An extended complementary filter for full-body MARG orientation estimation},
+  author    = {Madgwick, Sebastian OH and Wilson, Samuel and Turk, Ruth and Burridge, Jane and Kapatos, Christos and Vaidyanathan, Ravi},
+  journal   = {IEEE/ASME Transactions on Mechatronics},
+  volume    = {25},
+  number    = {4},
+  pages     = {2054--2064},
+  year      = {2020},
+  publisher = {IEEE}
 }
 
 @article{noordin2018sensor,
-  title={Sensor fusion algorithm by complementary filter for attitude estimation of quadrotor with low-cost IMU},
-  author={Noordin, A and Basri, MAM and Mohamed, Z},
-  journal={Telkomnika},
-  volume={16},
-  number={2},
-  pages={868--875},
-  year={2018},
-  publisher={Ahmad Dahlan University}
+  title     = {Sensor fusion algorithm by complementary filter for attitude estimation of quadrotor with low-cost IMU},
+  author    = {Noordin, A and Basri, MAM and Mohamed, Z},
+  journal   = {Telkomnika},
+  volume    = {16},
+  number    = {2},
+  pages     = {868--875},
+  year      = {2018},
+  publisher = {Ahmad Dahlan University}
 }
 
 @article{zeitlhofler2019nominal,
-  title={Nominal and observation-based attitude realization for precise orbit determination of the Jason sateilltes},
-  author={Zeitlh{\"o}fler, Julian},
-  year={2019}
+  title  = {Nominal and observation-based attitude realization for precise orbit determination of the Jason sateilltes},
+  author = {Zeitlh{\"o}fler, Julian},
+  year   = {2019}
 }
 
 @inproceedings{euston2008complementary,
-  title={A complementary filter for attitude estimation of a fixed-wing UAV},
-  author={Euston, Mark and Coote, Paul and Mahony, Robert and Kim, Jonghyuk and Hamel, Tarek},
-  booktitle={2008 IEEE/RSJ international conference on intelligent robots and systems},
-  pages={340--345},
-  year={2008},
-  organization={IEEE}
+  title        = {A complementary filter for attitude estimation of a fixed-wing UAV},
+  author       = {Euston, Mark and Coote, Paul and Mahony, Robert and Kim, Jonghyuk and Hamel, Tarek},
+  booktitle    = {2008 IEEE/RSJ international conference on intelligent robots and systems},
+  pages        = {340--345},
+  year         = {2008},
+  organization = {IEEE}
 }
 
 @article{wilson2019formulation,
-  title={Formulation of a new gradient descent MARG orientation algorithm: Case study on robot teleoperation},
-  author={Wilson, Samuel and Eberle, Henry and Hayashi, Yoshikatsu and Madgwick, Sebastian OH and McGregor, Alison and Jing, Xingjian and Vaidyanathan, Ravi},
-  journal={Mechanical Systems and Signal Processing},
-  volume={130},
-  pages={183--200},
-  year={2019},
-  publisher={Elsevier}
+  title     = {Formulation of a new gradient descent MARG orientation algorithm: Case study on robot teleoperation},
+  author    = {Wilson, Samuel and Eberle, Henry and Hayashi, Yoshikatsu and Madgwick, Sebastian OH and McGregor, Alison and Jing, Xingjian and Vaidyanathan, Ravi},
+  journal   = {Mechanical Systems and Signal Processing},
+  volume    = {130},
+  pages     = {183--200},
+  year      = {2019},
+  publisher = {Elsevier}
 }
 
 @article{cavallo2014experimental,
-  title={Experimental comparison of sensor fusion algorithms for attitude estimation},
-  author={Cavallo, Alberto and Cirillo, Andrea and Cirillo, Pasquale and De Maria, Giuseppe and Falco, Pietro and Natale, Ciro and Pirozzi, Salvatore},
-  journal={IFAC Proceedings Volumes},
-  volume={47},
-  number={3},
-  pages={7585--7591},
-  year={2014},
-  publisher={Elsevier}
+  title     = {Experimental comparison of sensor fusion algorithms for attitude estimation},
+  author    = {Cavallo, Alberto and Cirillo, Andrea and Cirillo, Pasquale and De Maria, Giuseppe and Falco, Pietro and Natale, Ciro and Pirozzi, Salvatore},
+  journal   = {IFAC Proceedings Volumes},
+  volume    = {47},
+  number    = {3},
+  pages     = {7585--7591},
+  year      = {2014},
+  publisher = {Elsevier}
 }
 
 @inproceedings{ludwig2018comparison,
-  title={Comparison of Euler Estimate using Extended Kalman Filter, Madgwick and Mahony on Quadcopter Flight Data},
-  author={Ludwig, Simone A and Burnham, Kaleb D},
-  booktitle={2018 International Conference on Unmanned Aircraft Systems (ICUAS)},
-  pages={1236--1241},
-  year={2018},
-  organization={IEEE}
+  title        = {Comparison of Euler Estimate using Extended Kalman Filter, Madgwick and Mahony on Quadcopter Flight Data},
+  author       = {Ludwig, Simone A and Burnham, Kaleb D},
+  booktitle    = {2018 International Conference on Unmanned Aircraft Systems (ICUAS)},
+  pages        = {1236--1241},
+  year         = {2018},
+  organization = {IEEE}
 }
 
 @inproceedings{ludwig2018comparisonuav,
-  title={Comparison of attitude and heading reference systems using foot mounted MIMU sensor data: basic, Madgwick, and Mahony},
-  author={Ludwig, Simone A and Burnham, Kaleb D and Jim{\'e}nez, Antonio R and Touma, Pierre A},
-  booktitle={Sensors and Smart Structures Technologies for Civil, Mechanical, and Aerospace Systems 2018},
-  volume={10598},
-  pages={105982L},
-  year={2018},
-  organization={International Society for Optics and Photonics}
+  title        = {Comparison of attitude and heading reference systems using foot mounted MIMU sensor data: basic, Madgwick, and Mahony},
+  author       = {Ludwig, Simone A and Burnham, Kaleb D and Jim{\'e}nez, Antonio R and Touma, Pierre A},
+  booktitle    = {Sensors and Smart Structures Technologies for Civil, Mechanical, and Aerospace Systems 2018},
+  volume       = {10598},
+  pages        = {105982L},
+  year         = {2018},
+  organization = {International Society for Optics and Photonics}
 }
 @inproceedings{diaz2015evaluation,
-  title={Evaluation of AHRS algorithms for inertial personal localization in industrial environments},
-  author={Diaz, Estefania Munoz and de Ponte M{\"u}ller, Fabian and Jim{\'e}nez, Antonio R and Zampella, Francisco},
-  booktitle={2015 IEEE International Conference on Industrial Technology (ICIT)},
-  pages={3412--3417},
-  year={2015},
-  organization={IEEE}
+  title        = {Evaluation of AHRS algorithms for inertial personal localization in industrial environments},
+  author       = {Diaz, Estefania Munoz and de Ponte M{\"u}ller, Fabian and Jim{\'e}nez, Antonio R and Zampella, Francisco},
+  booktitle    = {2015 IEEE International Conference on Industrial Technology (ICIT)},
+  pages        = {3412--3417},
+  year         = {2015},
+  organization = {IEEE}
 }
 
 @article{madgwick2010efficient,
-  title={An efficient orientation filter for inertial and inertial/magnetic sensor arrays},
-  author={Madgwick, Sebastian},
-  journal={Report x-io and University of Bristol (UK)},
-  volume={25},
-  pages={113--118},
-  year={2010}
+  title   = {An efficient orientation filter for inertial and inertial/magnetic sensor arrays},
+  author  = {Madgwick, Sebastian},
+  journal = {Report x-io and University of Bristol (UK)},
+  volume  = {25},
+  pages   = {113--118},
+  year    = {2010}
 }
